--- a/src/main/resources/com/mycompany/brankobank/saving_withdraw.fxml
+++ b/src/main/resources/com/mycompany/brankobank/saving_withdraw.fxml
@@ -8,12 +8,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.brankobank.PrimaryController">
    <children>
       <VBox alignment="TOP_CENTER" spacing="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label text="Branco Bank - Savings Account Withdrawal">
+            <Label text="Branck Bank - Savings Account Withdrawal">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -27,8 +26,8 @@
       </VBox>
       <VBox alignment="CENTER" layoutX="250.0" layoutY="152.0" prefHeight="148.0" prefWidth="600.0" spacing="20.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="152.0">
          <children>
-            <TextField promptText="Amount" />
-            <Button mnemonicParsing="false" text="Withdraw">
+            <TextField fx:id="saving_withdraw_amount" promptText="Amount" />
+            <Button mnemonicParsing="false" onAction="#withdraw_from_saving_click" text="Withdraw">
                <padding>
                   <Insets bottom="5.0" left="35.0" right="35.0" top="5.0" />
                </padding>
@@ -38,5 +37,6 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </VBox>
+      <Label fx:id="saving_withdraw_output" layoutX="36.0" layoutY="300.0" />
    </children>
 </AnchorPane>
